<resources>
    <string name="app_name">Mid Exam</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_or_sign_in_with">or sign in with</string>
    <string name="lbl_or_sign_up_with">or sign up with</string>
    <string name="lbl_sign_in_with_google">Sign in with Google</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_check_for_register">By Creating an Account, i accept Hiring Hub terms of Use and Privacy Policy</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_welcome_back">Welcome back!</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_your_status">Your Status</string>
    <string name="lbl_add_status">Add Status</string>
    <string name="lbl_edit_status">Edit Status</string>
    <string name="lbl_delete_status">Delete Status</string>
    <string name="lbl_no_status_message">You haven\'t posted a status yet.\nShare what\'s on your mind!</string>
    <string name="lbl_status_hint">What\'s on your mind?</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_logout_title">Logout</string>
    <string name="lbl_logout_message">Are you sure you want to logout from your account?</string>
    <string name="lbl_password_strength">Password Strength: </string>
    <string name="lbl_very_weak">Very Weak</string>
    <string name="lbl_weak">Weak</string>
    <string name="lbl_fair">Fair</string>
    <string name="lbl_good">Good</string>
    <string name="lbl_strong">Strong</string>
    <string name="lbl_keep_signed_in">Keep me signed in</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_terms_and_conditions">By creating an account, you agree to our Terms of Service and Privacy Policy</string>
</resources>