<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="@dimen/spacing_large"
    android:paddingEnd="@dimen/spacing_large"
    android:paddingTop="@dimen/spacing_xlarge"
    android:paddingBottom="@dimen/spacing_xlarge"
    tools:context=".auth.login.LoginActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/lbl_login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="8dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:backgroundTint="@color/gray"
        android:text="Sign in with Google"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_regular"
        android:drawableLeft="@drawable/ic_google"
        android:padding="@dimen/spacing_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblLogin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignInWithGoogle">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/unfocus_color" />

        <TextView
            android:id="@+id/lblOrSignInWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:text="@string/lbl_or_sign_in_with"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_small" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/unfocus_color" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:textColorHint="@color/hint_color"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_username"
            android:textAllCaps="false"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvUsernameWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        app:endIconMode="password_toggle"
        app:passwordToggleTint="@color/black"
        android:textColorHint="@color/hint_color"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvUsernameWarning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvPasswordWarning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/cbKeepSignedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="Keep me signed in"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordWarning"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:backgroundTint="@color/colorPrimary"
        android:text="Login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/cbKeepSignedIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an Account? "
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_regular" />
        <TextView
            android:id="@+id/tvSignUpHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up here"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_regular"
            android:textStyle="bold" />
    </LinearLayout>

<Button
    android:id="@+id/btnForgotPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_medium"
    android:backgroundTint="@android:color/transparent"
    android:padding="@dimen/spacing_small"
    android:text="@string/lbl_forgot_password"
    android:textAllCaps="false"
    android:textSize="@dimen/text_size_small"
    android:textColor="@color/black"
    app:layout_constraintEnd_toEndOf="@+id/tilPassword"
    app:layout_constraintTop_toBottomOf="@+id/tilPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>